--- a/rework_objects.ipynb
+++ b/rework_objects.ipynb
@@ -257,7 +257,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import scanpy as sc\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -370,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from liana.method.sp._spatialdm import _global_spatialdm, _local_to_dataframe, _local_spatialdm"
+    "from liana.method.sp._spatialdm import _global_spatialdm, _local_to_dataframe, _local_spatialdm, _local_morans"
    ]
   },
   {
@@ -393,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +408,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdata = global_bivariate_pipe(mdata,\n",
+    "                              local_fun = _vectorized_jaccard,\n",
+    "                              x_mod = 'progeny', \n",
+    "                              y_mod = 'dorothea',\n",
+    "                              dist=mdata.obsm['proximity']\n",
+    "                              )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdata.mod['local_jacc'] = li.ut.obsm_to_adata(mdata, 'local_score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,190 +478,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>interaction</th>\n",
-       "      <th>x_entity</th>\n",
-       "      <th>x_means</th>\n",
-       "      <th>x_non_zero</th>\n",
-       "      <th>y_entity</th>\n",
-       "      <th>y_means</th>\n",
-       "      <th>y_non_zero</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Androgen&amp;AHR</td>\n",
-       "      <td>Androgen</td>\n",
-       "      <td>1.055404</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>AHR</td>\n",
-       "      <td>-0.134946</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EGFR&amp;AHR</td>\n",
-       "      <td>EGFR</td>\n",
-       "      <td>0.913506</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>AHR</td>\n",
-       "      <td>-0.134946</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Estrogen&amp;AHR</td>\n",
-       "      <td>Estrogen</td>\n",
-       "      <td>-2.512781</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>AHR</td>\n",
-       "      <td>-0.134946</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Hypoxia&amp;AHR</td>\n",
-       "      <td>Hypoxia</td>\n",
-       "      <td>1.044591</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>AHR</td>\n",
-       "      <td>-0.134946</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>JAK-STAT&amp;AHR</td>\n",
-       "      <td>JAK-STAT</td>\n",
-       "      <td>6.993168</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>AHR</td>\n",
-       "      <td>-0.134946</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4111</th>\n",
-       "      <td>TNFa&amp;ZNF740</td>\n",
-       "      <td>TNFa</td>\n",
-       "      <td>5.252833</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>ZNF740</td>\n",
-       "      <td>0.856168</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4112</th>\n",
-       "      <td>Trail&amp;ZNF740</td>\n",
-       "      <td>Trail</td>\n",
-       "      <td>-2.640625</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>ZNF740</td>\n",
-       "      <td>0.856168</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4113</th>\n",
-       "      <td>VEGF&amp;ZNF740</td>\n",
-       "      <td>VEGF</td>\n",
-       "      <td>0.928763</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>ZNF740</td>\n",
-       "      <td>0.856168</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4114</th>\n",
-       "      <td>WNT&amp;ZNF740</td>\n",
-       "      <td>WNT</td>\n",
-       "      <td>-0.208129</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>ZNF740</td>\n",
-       "      <td>0.856168</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4115</th>\n",
-       "      <td>p53&amp;ZNF740</td>\n",
-       "      <td>p53</td>\n",
-       "      <td>-4.037091</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>ZNF740</td>\n",
-       "      <td>0.856168</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4116 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       interaction  x_entity   x_means  x_non_zero y_entity   y_means  \\\n",
-       "0     Androgen&AHR  Androgen  1.055404         1.0      AHR -0.134946   \n",
-       "1         EGFR&AHR      EGFR  0.913506         1.0      AHR -0.134946   \n",
-       "2     Estrogen&AHR  Estrogen -2.512781         1.0      AHR -0.134946   \n",
-       "3      Hypoxia&AHR   Hypoxia  1.044591         1.0      AHR -0.134946   \n",
-       "4     JAK-STAT&AHR  JAK-STAT  6.993168         1.0      AHR -0.134946   \n",
-       "...            ...       ...       ...         ...      ...       ...   \n",
-       "4111   TNFa&ZNF740      TNFa  5.252833         1.0   ZNF740  0.856168   \n",
-       "4112  Trail&ZNF740     Trail -2.640625         1.0   ZNF740  0.856168   \n",
-       "4113   VEGF&ZNF740      VEGF  0.928763         1.0   ZNF740  0.856168   \n",
-       "4114    WNT&ZNF740       WNT -0.208129         1.0   ZNF740  0.856168   \n",
-       "4115    p53&ZNF740       p53 -4.037091         1.0   ZNF740  0.856168   \n",
-       "\n",
-       "      y_non_zero  \n",
-       "0            1.0  \n",
-       "1            1.0  \n",
-       "2            1.0  \n",
-       "3            1.0  \n",
-       "4            1.0  \n",
-       "...          ...  \n",
-       "4111         1.0  \n",
-       "4112         1.0  \n",
-       "4113         1.0  \n",
-       "4114         1.0  \n",
-       "4115         1.0  \n",
-       "\n",
-       "[4116 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xy_stats"
    ]
@@ -633,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,11 +515,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# weight = dist.A.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,118 +543,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float32')"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weight.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<4116x4032 sparse matrix of type '<class 'numpy.float32'>'\n",
-       "\twith 16595712 stored elements in Compressed Sparse Column format>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_mat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numba as nb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name '_vectorized_correlations' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m local_pc \u001b[39m=\u001b[39m _vectorized_correlations(x_mat\u001b[39m.\u001b[39mT\u001b[39m.\u001b[39mA, y_mat\u001b[39m.\u001b[39mT\u001b[39m.\u001b[39mA, dist, method\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mpearson\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name '_vectorized_correlations' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "local_pc = _vectorized_pearson(x_mat.T.A, y_mat.T.A, dist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numba as nb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_pc = _vectorized_pearson(x_mat.T.A, y_mat.T.A, weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_sp = _vectorized_spearman(x_mat.T.A, y_mat.T.A, weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_wcos = _vectorized_wcosine(x_mat.T.A, y_mat.T.A, weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_wjac = _vectorized_jaccard(x_mat.T.A, y_mat.T.A, weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm_factor = dist.shape[0] / dist.sum()\n",
+    "dist_norm = csr_matrix(norm_factor * dist)\n",
+    "\n",
+    "local_morans = _local_morans(x_mat.T.A, y_mat.T.A, dist_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_fun = _local_morans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_fun.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "None is None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from liana.method.sp import spatialdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -792,14 +678,13 @@
    "outputs": [],
    "source": [
     "local_sp_pvals = _local_permutation_pvals(x_mat = x_mat.A.T, \n",
-    "                                          y_mat = y_mat.A.T, \n",
-    "                                          local_truth=masked_pc,\n",
-    "                                          local_fun=_vectorized_correlations,\n",
-    "                                          dist=dist, \n",
+    "                                          y_mat = y_mat.A.T,\n",
+    "                                          local_truth=local_pc,\n",
+    "                                          local_fun=_vectorized_pearson,\n",
+    "                                          dist=weight, \n",
     "                                          n_perm=20, \n",
     "                                          positive_only=False,\n",
-    "                                          seed=0,\n",
-    "                                          method=\"pearson\"\n",
+    "                                          seed=0\n",
     "                                          )"
    ]
   },
