--- a/correlations_clean.ipynb
+++ b/correlations_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "afe4cf0d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "153e7944-adbb-401e-914b-09c227dcfdea",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cbb22f08-505c-4087-af67-84577d421f60",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4f0fe90c-bf2b-44b3-8798-8aaad0e402f1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "22a8de43-4ff7-4e93-9056-e27ba4a0afef",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a833a72a",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8a5790dd",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3b30f85e",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e6020530",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "442d2fdf",
    "metadata": {},
    "outputs": [],
@@ -184,18 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9b2eae96-cedb-44e6-b9b1-e122bba505bb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using `.X`!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp, lr_res, ligand_pos, receptor_pos = _global_lr_pipe(adata=adata,\n",
     "                                                         resource=resource,\n",
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "22989614",
    "metadata": {},
    "outputs": [],
@@ -222,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "76acd258",
    "metadata": {},
    "outputs": [],
@@ -233,134 +225,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ee5c3bc9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>interaction</th>\n",
-       "      <th>ligand</th>\n",
-       "      <th>receptor</th>\n",
-       "      <th>ligand_complex</th>\n",
-       "      <th>receptor_complex</th>\n",
-       "      <th>ligand_means</th>\n",
-       "      <th>ligand_props</th>\n",
-       "      <th>receptor_means</th>\n",
-       "      <th>receptor_props</th>\n",
-       "      <th>prop_min</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dll1&amp;Notch1</td>\n",
-       "      <td>Dll1</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>Dll1</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>0.037283</td>\n",
-       "      <td>0.057292</td>\n",
-       "      <td>0.216689</td>\n",
-       "      <td>0.276786</td>\n",
-       "      <td>0.057292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Adam10&amp;Notch1</td>\n",
-       "      <td>Adam10</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>Adam10</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>0.623617</td>\n",
-       "      <td>0.651786</td>\n",
-       "      <td>0.216689</td>\n",
-       "      <td>0.276786</td>\n",
-       "      <td>0.276786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jag1&amp;Notch1</td>\n",
-       "      <td>Jag1</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>Jag1</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>0.051299</td>\n",
-       "      <td>0.075893</td>\n",
-       "      <td>0.216689</td>\n",
-       "      <td>0.276786</td>\n",
-       "      <td>0.075893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Adam17&amp;Notch1</td>\n",
-       "      <td>Adam17</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>Adam17</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>0.121026</td>\n",
-       "      <td>0.167783</td>\n",
-       "      <td>0.216689</td>\n",
-       "      <td>0.276786</td>\n",
-       "      <td>0.167783</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Dlk1&amp;Notch1</td>\n",
-       "      <td>Dlk1</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>Dlk1</td>\n",
-       "      <td>Notch1</td>\n",
-       "      <td>0.236641</td>\n",
-       "      <td>0.213542</td>\n",
-       "      <td>0.216689</td>\n",
-       "      <td>0.276786</td>\n",
-       "      <td>0.213542</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     interaction  ligand receptor ligand_complex receptor_complex  \\\n",
-       "0    Dll1&Notch1    Dll1   Notch1           Dll1           Notch1   \n",
-       "1  Adam10&Notch1  Adam10   Notch1         Adam10           Notch1   \n",
-       "2    Jag1&Notch1    Jag1   Notch1           Jag1           Notch1   \n",
-       "3  Adam17&Notch1  Adam17   Notch1         Adam17           Notch1   \n",
-       "4    Dlk1&Notch1    Dlk1   Notch1           Dlk1           Notch1   \n",
-       "\n",
-       "   ligand_means  ligand_props  receptor_means  receptor_props  prop_min  \n",
-       "0      0.037283      0.057292        0.216689        0.276786  0.057292  \n",
-       "1      0.623617      0.651786        0.216689        0.276786  0.276786  \n",
-       "2      0.051299      0.075893        0.216689        0.276786  0.075893  \n",
-       "3      0.121026      0.167783        0.216689        0.276786  0.167783  \n",
-       "4      0.236641      0.213542        0.216689        0.276786  0.213542  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr_res.head()"
    ]
@@ -375,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bbc70571",
    "metadata": {},
    "outputs": [],
@@ -394,19 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "58a369b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 7s, sys: 97 ms, total: 1min 7s\n",
-      "Wall time: 6.57 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "masked_pc = _masked_pearson(x_mat, y_mat, weight, weight_thr=0.0)"
@@ -414,19 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "be73ea4e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3min 9s, sys: 418 ms, total: 3min 10s\n",
-      "Wall time: 17.4 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "masked_sp = _masked_spearman(x_mat, y_mat, weight, weight_thr=0.0)"
@@ -434,66 +284,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "86eb5c2b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.08149756, -0.25916123, -0.14290628, ..., -0.10626076,\n",
-       "         0.08216916,  0.        ],\n",
-       "       [ 0.        ,  0.07690792, -0.07125933, ..., -0.30776626,\n",
-       "        -0.1647764 ,  0.19228509],\n",
-       "       [ 0.03793216, -0.08338802, -0.27273718, ..., -0.34547132,\n",
-       "         0.15676172,  0.08250511],\n",
-       "       ...,\n",
-       "       [ 0.26313928,  0.32310468, -0.22683044, ...,  0.21042919,\n",
-       "        -0.1380716 ,  0.19210997],\n",
-       "       [ 0.0876326 , -0.18898553,  0.13564353, ..., -0.01432045,\n",
-       "         0.6279468 ,  0.        ],\n",
-       "       [ 0.        , -0.01092029,  0.48072618, ...,  0.20706737,\n",
-       "        -0.00277106,  0.        ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "masked_pc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0d7362ee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.18781684, -0.11848656,  0.12627968, ...,  0.34751382,\n",
-       "         0.24387598,  0.1599317 ],\n",
-       "       [ 0.30682617, -0.2751629 ,  0.29463288, ...,  0.507999  ,\n",
-       "         0.39533183, -0.1267864 ],\n",
-       "       [ 0.33031335, -0.09867558,  0.13571519, ..., -0.41641706,\n",
-       "         0.2175387 ,  0.04966684],\n",
-       "       ...,\n",
-       "       [ 0.31701288,  0.25899726, -0.01386184, ...,  0.37027845,\n",
-       "        -0.32945094,  0.6252148 ],\n",
-       "       [ 0.43997544,  0.0042903 ,  0.4969458 , ..., -0.04243322,\n",
-       "         0.517518  ,  0.0436135 ],\n",
-       "       [ 0.42425486,  0.01879715,  0.55392396, ...,  0.26318154,\n",
-       "         0.3640542 ,  0.43966317]], dtype=float32)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "masked_sp"
    ]
@@ -1331,7 +1135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 | packaged by conda-forge | (main, Feb  2 2023, 20:20:04) [GCC 11.3.0]"
   },
   "vscode": {
    "interpreter": {
