--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Simply put, tensor_cell2cell uses LIANA’s output by sample to build a 4D tensor, represented by 1) contexts, 2) interactions, 3) sender, and 4) receiver cell types. This tensor is then decomposed into a set of factors, which can be interpreted as low-dimensionality latent variables (vectors) that capture the CCC patterns across contexts.\n",
     "\n",
-    "Here, we will combine LIANA with tensor_cell2cell to decipher potential ligand-receptor interaction changes. As a simple example, we will look at ~25k PBMCs from 8 donors, each before and after IFN-beta stimulation ([Kang et al., 2018](https://www.nature.com/articles/nbt.4042); [GSE96583](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE96583)). Note that by focusing on PBMCs, for the purpose of this tutorial, we assume that coordinated events occur among them."
+    "Here, we will combine LIANA with tensor_cell2cell to decipher potential ligand-receptor interaction changes. As a simple example, we will look at ~25k PBMCs from 8 pooled patient lupus samples, each before and after IFN-beta stimulation ([Kang et al., 2018](https://www.nature.com/articles/nbt.4042); [GSE96583](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE96583)). Note that by focusing on PBMCs, for the purpose of this tutorial, we assume that coordinated events occur among them."
    ]
   },
   {
@@ -73,40 +73,13 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that these steps are not extensive but the bare minimum, we recommend to users to check the [Quality Control](https://www.sc-best-practices.org/preprocessing_visualization/quality_control.html) and other relevant chapters from the best-practices book."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data as from CCC chapter\n",
-    "adata = sc.read(\n",
-    "    \"kang_counts_25k.h5ad\", backup_url=\"https://figshare.com/ndownloader/files/34464122\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Store the counts for later use\n",
-    "adata.layers[\"counts\"] = adata.X.copy()\n",
-    "\n",
-    "# Rename label to condition, replicate to patient\n",
-    "adata.obs = adata.obs.rename({\"label\": \"condition\", \"replicate\": \"patient\"}, axis=1)\n",
-    "# assign sample\n",
-    "adata.obs[\"sample\"] = (\n",
-    "    adata.obs[\"condition\"].astype(\"str\") + \"&\" + adata.obs[\"patient\"].str.slice(8, 13)\n",
-    ")"
+    "adata = li.testing.datasets.kang_2018()"
    ]
   },
   {
@@ -365,6 +338,14 @@
    "metadata": {},
    "source": [
     "#### Basic QC"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this data has been largely pre-processed & annotated, we refer the user to the [Quality Control](https://www.sc-best-practices.org/preprocessing_visualization/quality_control.html) and other relevant chapters from the best-practices book for information about pre-processing and annotation steps."
    ]
   },
   {
