kang to utility

--- a/docs/source/notebooks/mofacell.ipynb
+++ b/docs/source/notebooks/mofacell.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "mofa, decoupler, and omnipath can be installed via pip with the following commands:\n",
+    "Install mofa, decoupler, and omnipath via pip with the following commands:\n",
     "\n",
     "```pip install decoupler```\n",
     "\n",
@@ -232,7 +232,7 @@
     "mdata = li.multi.adata_to_views(adata,\n",
     "                                groupby=groupby,\n",
     "                                sample_key=sample_key,\n",
-    "                                obs_keys=['condition', 'patient'],\n",
+    "                                obs_keys=['condition', 'patient'], # add those to mdata.obs\n",
     "                                min_prop=0.05, # min nnz values (filter features)\n",
     "                                min_smpls=3, # min samples per view (filter features)\n",
     "                                min_cells=25, # min cells per view (filter samples)\n",
@@ -323,6 +323,7 @@
    "outputs": [],
    "source": [
     "for view in mdata.mod.keys():\n",
+    "    \n",
     "    sc.pp.normalize_total(mdata.mod[view], target_sum=1e4)\n",
     "    sc.pp.log1p(mdata.mod[view])\n",
     "    \n",
@@ -378,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the single cell data is transformed into a multi-view representation, we can use MOFA to run a multicellular factor analysis."
+    "Now that the single-cell data is transformed into a multi-view representation, we can use MOFA to run a multicellular factor analysis."
    ]
   },
   {
@@ -464,7 +465,7 @@
     "           convergence_mode='medium',\n",
     "           n_factors=5,\n",
     "           outfile='models/mofacell.h5ad',\n",
-    "           use_var = 'highly_variable'\n",
+    "           use_var='highly_variable'\n",
     "           )"
    ]
   },
@@ -629,7 +630,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import ttest_rel # we use a paired t-test as the samples are paired"
+    " # we use a paired t-test as the samples are paired\n",
+    "from scipy.stats import ttest_rel"
    ]
   },
   {
@@ -855,6 +857,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here, we that some genes are present in only some of the cell type views, and that among the top genes high loadings seem to be cell type specific."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Explore the model"
    ]
   },
@@ -919,7 +929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that CD14+ Monocytes have the highest R-squared for the first factor, in other words they are the most important cell type in explaining the variability between the two conditions."
+    "We can see that Factor 1 captures the majority of the variance explained, and that CD14+ Monocytes have the highest R-squared for the first factor, in other words they are the most important cell type in explaining the variability between the two conditions."
    ]
   },
   {
@@ -936,7 +946,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial is just a short introduction to the use of MOFA to any analysis, we thus refer the users to the available [MOFA](https://biofam.github.io/MOFA2/tutorials.html) & [muon tutorials](https://muon-tutorials.readthedocs.io/en/latest/single-cell-rna-atac/index.html) for more applications & details."
+    "This tutorial is just a short introduction of the use of MOFA, we thus refer the users to the available [MOFA](https://biofam.github.io/MOFA2/tutorials.html) & [muon tutorials](https://muon-tutorials.readthedocs.io/en/latest/single-cell-rna-atac/index.html) for more applications & details."
    ]
   },
   {
