--- a/docs/source/notebooks/mofacell.ipynb
+++ b/docs/source/notebooks/mofacell.ipynb
@@ -934,12 +934,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model.close()"
+    "## Outlook & Further Analysis"
    ]
   },
   {
@@ -952,10 +951,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.close()"
+   ]
   }
  ],
  "metadata": {
