--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -225,30 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now running: ctrl&101:   0%|          | 0/16 [00:00<?, ?it/s]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&107:   6%|▋         | 1/16 [00:06<01:34,  6.28s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:11<01:17,  5.55s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:19<01:26,  6.62s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:25<01:18,  6.51s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:30<01:05,  5.93s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1256:  38%|███▊      | 6/16 [00:37<01:01,  6.14s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1488:  44%|████▍     | 7/16 [00:43<00:56,  6.27s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&101:  50%|█████     | 8/16 [00:49<00:50,  6.29s/it] /home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&107:  56%|█████▋    | 9/16 [00:55<00:42,  6.06s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:00<00:34,  5.69s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:07<00:30,  6.13s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:13<00:24,  6.06s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:18<00:17,  5.78s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1256:  88%|████████▊ | 14/16 [01:24<00:11,  5.91s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488:  94%|█████████▍| 15/16 [01:31<00:06,  6.10s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488: 100%|██████████| 16/16 [01:38<00:00,  6.15s/it]\n"
+      "Now running: stim&1488: 100%|██████████| 16/16 [01:32<00:00,  5.75s/it]\n"
      ]
     }
    ],
@@ -275,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -419,106 +403,6 @@
        "      <td>0.001949</td>\n",
        "      <td>1.009959e-08</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ctrl&amp;101</td>\n",
-       "      <td>FGR3</td>\n",
-       "      <td>CD14</td>\n",
-       "      <td>TIMP1</td>\n",
-       "      <td>CD63</td>\n",
-       "      <td>2.627803</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.208072</td>\n",
-       "      <td>1.545891</td>\n",
-       "      <td>2.279768</td>\n",
-       "      <td>0.132816</td>\n",
-       "      <td>0.984116</td>\n",
-       "      <td>0.266597</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000035</td>\n",
-       "      <td>0.002340</td>\n",
-       "      <td>1.306992e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6720</th>\n",
-       "      <td>ctrl&amp;1039</td>\n",
-       "      <td>CD14</td>\n",
-       "      <td>CD14</td>\n",
-       "      <td>TIMP1</td>\n",
-       "      <td>CD63</td>\n",
-       "      <td>2.425800</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.273580</td>\n",
-       "      <td>1.221836</td>\n",
-       "      <td>2.444704</td>\n",
-       "      <td>0.096966</td>\n",
-       "      <td>0.981173</td>\n",
-       "      <td>0.236313</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000068</td>\n",
-       "      <td>0.007430</td>\n",
-       "      <td>3.928489e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18041</th>\n",
-       "      <td>stim&amp;1015</td>\n",
-       "      <td>CD8T</td>\n",
-       "      <td>CD8T</td>\n",
-       "      <td>B2M</td>\n",
-       "      <td>CD3D</td>\n",
-       "      <td>2.469810</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.636665</td>\n",
-       "      <td>1.044881</td>\n",
-       "      <td>0.593775</td>\n",
-       "      <td>0.076761</td>\n",
-       "      <td>0.978075</td>\n",
-       "      <td>0.118691</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.004666</td>\n",
-       "      <td>0.012823</td>\n",
-       "      <td>4.324118e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26010</th>\n",
-       "      <td>stim&amp;1256</td>\n",
-       "      <td>CD8T</td>\n",
-       "      <td>CD8T</td>\n",
-       "      <td>B2M</td>\n",
-       "      <td>CD3D</td>\n",
-       "      <td>2.646979</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.805692</td>\n",
-       "      <td>1.100260</td>\n",
-       "      <td>0.731686</td>\n",
-       "      <td>0.085537</td>\n",
-       "      <td>0.981442</td>\n",
-       "      <td>0.143954</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.004304</td>\n",
-       "      <td>0.011988</td>\n",
-       "      <td>4.870487e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1598</th>\n",
-       "      <td>ctrl&amp;107</td>\n",
-       "      <td>CD14</td>\n",
-       "      <td>CD14</td>\n",
-       "      <td>TIMP1</td>\n",
-       "      <td>CD63</td>\n",
-       "      <td>2.424750</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.431330</td>\n",
-       "      <td>0.987428</td>\n",
-       "      <td>2.223862</td>\n",
-       "      <td>0.096605</td>\n",
-       "      <td>0.982185</td>\n",
-       "      <td>0.222080</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000114</td>\n",
-       "      <td>0.002060</td>\n",
-       "      <td>6.803561e-08</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -530,11 +414,6 @@
        "26009  stim&1256     NK   CD8T            B2M             CD3D  2.655090   \n",
        "1597    ctrl&107   FGR3   CD14          TIMP1             CD63  2.544711   \n",
        "9014   ctrl&1244   FGR3   CD14          TIMP1             CD63  2.504210   \n",
-       "0       ctrl&101   FGR3   CD14          TIMP1             CD63  2.627803   \n",
-       "6720   ctrl&1039   CD14   CD14          TIMP1             CD63  2.425800   \n",
-       "18041  stim&1015   CD8T   CD8T            B2M             CD3D  2.469810   \n",
-       "26010  stim&1256   CD8T   CD8T            B2M             CD3D  2.646979   \n",
-       "1598    ctrl&107   CD14   CD14          TIMP1             CD63  2.424750   \n",
        "\n",
        "       cellphone_pvals  expr_prod  scaled_weight  lr_logfc  spec_weight  \\\n",
        "18040              0.0   2.652776       1.086438  0.628031     0.077230   \n",
@@ -542,11 +421,6 @@
        "26009              0.0   3.819609       1.123354  0.749565     0.085849   \n",
        "1597               0.0   5.852476       1.065290  1.678028     0.104096   \n",
        "9014               0.0   5.661785       1.703509  2.209408     0.116978   \n",
-       "0                  0.0   6.208072       1.545891  2.279768     0.132816   \n",
-       "6720               0.0   5.273580       1.221836  2.444704     0.096966   \n",
-       "18041              0.0   2.636665       1.044881  0.593775     0.076761   \n",
-       "26010              0.0   3.805692       1.100260  0.731686     0.085537   \n",
-       "1598               0.0   5.431330       0.987428  2.223862     0.096605   \n",
        "\n",
        "        lrscore  lr_probs  cellchat_pvals  steady_rank  specificity_rank  \\\n",
        "18040  0.978141  0.119143             0.0     0.004666          0.012823   \n",
@@ -554,32 +428,22 @@
        "26009  0.981475  0.144068             0.0     0.004304          0.011988   \n",
        "1597   0.982827  0.232994             0.0     0.000452          0.001832   \n",
        "9014   0.985015  0.222247             0.0     0.000029          0.001949   \n",
-       "0      0.984116  0.266597             0.0     0.000035          0.002340   \n",
-       "6720   0.981173  0.236313             0.0     0.000068          0.007430   \n",
-       "18041  0.978075  0.118691             0.0     0.004666          0.012823   \n",
-       "26010  0.981442  0.143954             0.0     0.004304          0.011988   \n",
-       "1598   0.982185  0.222080             0.0     0.000114          0.002060   \n",
        "\n",
        "       magnitude_rank  \n",
        "18040    4.430283e-09  \n",
        "6719     4.913099e-09  \n",
        "26009    6.091422e-09  \n",
        "1597     8.509626e-09  \n",
-       "9014     1.009959e-08  \n",
-       "0        1.306992e-08  \n",
-       "6720     3.928489e-08  \n",
-       "18041    4.324118e-08  \n",
-       "26010    4.870487e-08  \n",
-       "1598     6.803561e-08  "
+       "9014     1.009959e-08  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata.uns[\"liana_res\"].sort_values(\"magnitude_rank\").head(10)"
+    "adata.uns[\"liana_res\"].sort_values(\"magnitude_rank\").head()"
    ]
   },
   {
@@ -1579,7 +1443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pathway enrichment"
+    "## Pathway enrichment"
    ]
   },
   {
@@ -1936,90 +1800,16 @@
     "lr_loadings.set_index('variable', inplace=True)\n",
     "# pivot views to wide\n",
     "lr_loadings = lr_loadings.pivot(columns='view', values='loadings')\n",
+    "# replace NaN with 0\n",
     "lr_loadings.replace(np.nan, 0, inplace=True)\n",
     "lr_loadings.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>view</th>\n",
-       "      <th>pathway</th>\n",
-       "      <th>estimate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>B&amp;CD14</td>\n",
-       "      <td>Estrogen</td>\n",
-       "      <td>0.139248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>B&amp;CD4T</td>\n",
-       "      <td>Estrogen</td>\n",
-       "      <td>-0.418715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>B&amp;CD8T</td>\n",
-       "      <td>Estrogen</td>\n",
-       "      <td>0.359616</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>B&amp;DCs</td>\n",
-       "      <td>Estrogen</td>\n",
-       "      <td>0.078014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>B&amp;FGR3</td>\n",
-       "      <td>Estrogen</td>\n",
-       "      <td>0.352631</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     view   pathway  estimate\n",
-       "0  B&CD14  Estrogen  0.139248\n",
-       "1  B&CD4T  Estrogen -0.418715\n",
-       "2  B&CD8T  Estrogen  0.359616\n",
-       "3   B&DCs  Estrogen  0.078014\n",
-       "4  B&FGR3  Estrogen  0.352631"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# run pathway enrichment analysis\n",
     "estimate, pvals =  dc.run_mlm(lr_loadings.transpose(), lr_progeny,\n",
@@ -2030,13 +1820,12 @@
     "            melt(ignore_index=False, value_name='estimate', var_name='pathway').\n",
     "            reset_index().\n",
     "            rename(columns={'index':'view'})\n",
-    "            )\n",
-    "estimate.head()"
+    "            )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2052,10 +1841,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8760813242155)>"
+       "<ggplot: (8760813564895)>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
