--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -554,14 +554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44/44 [00:00<00:00, 249.02it/s]\n"
+      "100%|██████████| 44/44 [00:00<00:00, 232.20it/s]\n"
      ]
     }
    ],
@@ -573,6 +573,7 @@
     "                              lrs_per_sample = 20, # minimum number of interactions to keep a sample in a specific view\n",
     "                              lrs_per_view = 20, # minimum number of interactions to keep a view\n",
     "                              samples_per_view = 10, # minimum number of samples to keep a view\n",
+    "                              min_variance = 0, # minimum variance to keep an interaction\n",
     "                              lr_fill = 0, # fill missing LR values across samples with this\n",
     "                              verbose=True\n",
     "                              )"
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +697,7 @@
        "    CD8T&DCs:\t13 x 38"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +853,6 @@
       "#######################\n",
       "\n",
       "\n",
-      "Warning: Output file models/mofatalk.h5ad already exists, it will be replaced\n",
       "Saving model in models/mofatalk.h5ad...\n",
       "Saved MOFA embeddings in .obsm['X_mofa'] slot and their loadings in .varm['LFs'].\n"
      ]
@@ -864,9 +864,6 @@
     "           convergence_mode='medium',\n",
     "           outfile='models/mofatalk.h5ad',\n",
     "           n_factors=4,\n",
-    "           save_metadata=True,\n",
-    "           quiet=True,\n",
-    "           verbose=False,\n",
     "           )"
    ]
   },
@@ -896,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +990,7 @@
        "4   ctrl&107 -0.337035 -0.018800 -0.013755 -0.009356   patient_107      ctrl"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1076,10 +1073,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727059250092)>"
+       "<ggplot: (8727047605534)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1195,7 @@
        "475  1.386953       HLA-DPB1             LAG3    DCs   CD8T"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1239,10 +1236,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727059212979)>"
+       "<ggplot: (8727050527507)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1300,7 @@
        "Expectations: W, Z"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1344,10 +1341,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727050498745)>"
+       "<ggplot: (8727083984149)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1469,7 @@
        "151      NFkB     SELE^CD44  3.332552"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1715,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1772,10 +1769,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727050033342)>"
+       "<ggplot: (8727059366934)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
