improve intro, link to tensor

--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intercellular Context-Factorization with MOFA"
+    "# Intercellular Context Factorization with MOFA"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we will adapt MOFA to perform a factorization on ligand-receptor interaction scores across samples. This is inspired by and in line with the factorization proposed by Tensor-cell2cell [Armingol and Baghdassarian et al., 2022](https://www.nature.com/articles/s41467-022-31369-2) - see existing [tutorial](https://liana-py.readthedocs.io/en/latest/notebooks/liana_c2c.html). \n",
+    "Here, we will adapt the statistical framework of multi-omics factor analysis ([MOFA](https://www.embopress.org/doi/full/10.15252/msb.20178124)) to obtain intercellular communication programmes - in the form of ligand-receptor interaction scores observed to change across samples. This application of MOFA is inspired by and is in line with the factorization proposed by Tensor-cell2cell [Armingol and Baghdassarian et al., 2022](https://www.nature.com/articles/s41467-022-31369-2) - see existing [tutorial](https://liana-py.readthedocs.io/en/latest/notebooks/liana_c2c.html). \n",
     "\n",
     "Such factorization approaches essentially enable us to decipher context-driven intercellular communication by simultaneously accounting for an unlimited number of “contexts” in an untargeted manner.\n",
     "Similarly to Tensor-cell2cell, this application of MOFA is able to handle cell-cell communication results coming from any experimental design, regardless of its complexity. \n",
