re-run tutorials

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -594,7 +594,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 286.41it/s]\n"
+      "100%|██████████| 1000/1000 [00:04<00:00, 216.56it/s]\n"
      ]
     }
    ],
@@ -844,7 +844,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8777775936443)>"
+       "<ggplot: (8766453307236)>"
       ]
      },
      "execution_count": 13,
@@ -912,7 +912,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:02<00:00, 356.12it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 278.18it/s]\n"
      ]
     },
     {
@@ -930,7 +930,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:02<00:00, 342.92it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 292.85it/s]\n"
      ]
     }
    ],
@@ -1187,7 +1187,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8777775815209)>"
+       "<ggplot: (8766453152462)>"
       ]
      },
      "execution_count": 17,
@@ -1240,7 +1240,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8777775652798)>"
+       "<ggplot: (8766452993286)>"
       ]
      },
      "execution_count": 18,
@@ -1300,7 +1300,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8777775805317)>"
+       "<ggplot: (8766452115285)>"
       ]
      },
      "execution_count": 20,
@@ -1349,7 +1349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
