--- a/docs/source/notebooks/mofacell.ipynb
+++ b/docs/source/notebooks/mofacell.ipynb
@@ -224,7 +224,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:02<00:00,  2.80it/s]\n"
+      "100%|██████████| 8/8 [00:03<00:00,  2.56it/s]\n"
      ]
     }
    ],
@@ -453,6 +453,7 @@
       "#######################\n",
       "\n",
       "\n",
+      "Warning: Output file models/mofacell.h5ad already exists, it will be replaced\n",
       "Saving model in models/mofacell.h5ad...\n",
       "Saved MOFA embeddings in .obsm['X_mofa'] slot and their loadings in .varm['LFs'].\n"
      ]
@@ -688,7 +689,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8763315599856)>"
+       "<ggplot: (8744667682240)>"
       ]
      },
      "execution_count": 15,
@@ -828,7 +829,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8763315476535)>"
+       "<ggplot: (8744667691474)>"
       ]
      },
      "execution_count": 17,
@@ -974,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
