--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -1709,7 +1709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
