--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -225,14 +225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now running: stim&1488: 100%|██████████| 16/16 [01:44<00:00,  6.53s/it]\n"
+      "Now running: ctrl&101:   0%|          | 0/16 [00:00<?, ?it/s]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&107:   6%|▋         | 1/16 [00:06<01:42,  6.85s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:12<01:25,  6.11s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:20<01:33,  7.21s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:27<01:21,  6.81s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:32<01:07,  6.15s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1256:  38%|███▊      | 6/16 [00:38<01:02,  6.27s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1488:  44%|████▍     | 7/16 [00:45<00:58,  6.51s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&101:  50%|█████     | 8/16 [00:52<00:53,  6.66s/it] /home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&107:  56%|█████▋    | 9/16 [00:59<00:47,  6.76s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:05<00:39,  6.59s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:14<00:36,  7.28s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:30<00:39,  9.82s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:54<00:42, 14.04s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1256:  88%|████████▊ | 14/16 [02:01<00:23, 11.93s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488:  94%|█████████▍| 15/16 [02:08<00:10, 10.63s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488: 100%|██████████| 16/16 [02:17<00:00,  8.59s/it]\n"
      ]
     }
    ],
@@ -501,7 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727083795583)>"
+       "<ggplot: (8750229661739)>"
       ]
      },
      "execution_count": 10,
@@ -554,14 +570,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44/44 [00:00<00:00, 232.20it/s]\n"
+      "100%|██████████| 44/44 [00:00<00:00, 204.42it/s]\n"
      ]
     }
    ],
@@ -607,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +713,7 @@
        "    CD8T&DCs:\t13 x 38"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -853,6 +869,7 @@
       "#######################\n",
       "\n",
       "\n",
+      "Warning: Output file models/mofatalk.h5ad already exists, it will be replaced\n",
       "Saving model in models/mofatalk.h5ad...\n",
       "Saved MOFA embeddings in .obsm['X_mofa'] slot and their loadings in .varm['LFs'].\n"
      ]
@@ -893,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1007,7 @@
        "4   ctrl&107 -0.337035 -0.018800 -0.013755 -0.009356   patient_107      ctrl"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1073,10 +1090,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727047605534)>"
+       "<ggplot: (8750204794877)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1212,7 @@
        "475  1.386953       HLA-DPB1             LAG3    DCs   CD8T"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1236,10 +1253,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727050527507)>"
+       "<ggplot: (8750205180775)>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1317,7 @@
        "Expectations: W, Z"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1341,10 +1358,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727083984149)>"
+       "<ggplot: (8750204801853)>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1486,7 @@
        "151      NFkB     SELE^CD44  3.332552"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1732,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1769,10 +1786,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8727059366934)>"
+       "<ggplot: (8750204363002)>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
