update to latest decoupler & shape

--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -38,11 +38,11 @@
    "source": [
     "cell2cell, decoupler, and omnipath can be installed via pip with the following commands:\n",
     "\n",
-    "```pip install decoupler```\n",
-    "\n",
-    "```pip install cell2cell```\n",
-    "\n",
-    "```pip install omnipath```"
+    "```python\n",
+    "pip install decoupler\n",
+    "pip install cell2cell\n",
+    "pip install omnipath\n",
+    "```"
    ]
   },
   {
