--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -45,13 +45,12 @@
    "source": [
     "mofa, decoupler, and omnipath can be installed via pip with the following commands:\n",
     "\n",
-    "```pip install decoupler```\n",
-    "\n",
-    "```pip install mofax```\n",
-    "\n",
-    "```pip install muon```\n",
-    "\n",
-    "```pip install omnipath```"
+    "```python\n",
+    "pip install decoupler\n",
+    "pip install mofax\n",
+    "pip install muon\n",
+    "pip install omnipath\n",
+    "```"
    ]
   },
   {
@@ -1854,7 +1853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
