improve tutorial text

--- a/docs/source/notebooks/mofacell.ipynb
+++ b/docs/source/notebooks/mofacell.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "    layers: 'counts'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -845,18 +845,19 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8784863636291)>"
+       "<ggplot: (8784863280516)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# get top 25 genes across all views\n",
+    "# get 25 genes with highest loadings across all views\n",
     "top_genes = factor1_loadings['variable'].head(25)\n",
     "top_loadings = factor1_loadings[factor1_loadings['variable'].isin(top_genes)]\n",
+    "# ^ Note that the genes with the lowest loadings are equally interesting\n",
     "\n",
     "# plot them\n",
     "# dotplot of variable, view, loadings\n",
@@ -874,7 +875,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we that some genes are present in only some of the cell type views, and that among the top genes high loadings seem to be cell type specific."
+    "We can see that some genes are present in only some of the cell type views and that some of the genes with highest loadings tend to be cell type specific.\n",
+    "Many genes are also be shared across views, but it's challenging to to decipher if they are shared because they are coordinated by the same biological process or because of technical issues with the data.\n",
+    "Thus, an essential step in the analysis is to select the genes for each cell type (view) in a way that is consistent with the biological knowledge of those cell types."
    ]
   },
   {
@@ -946,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that Factor 1 captures the majority of the variance explained, and that CD14+ Monocytes have the highest R-squared for the first factor, in other words they are the most important cell type in explaining the variability between the two conditions."
+    "We can see that Factor 1 captures the majority of the variance explained, and that CD14+ Monocytes have the highest R-squared for the first factor. In other words, CD14+ Monocytes are the cell type with the highest variance explained by the model and specifically factor 1, thus this suggests that the variability within this view is mostly associated with the difference between samples from the control and condition."
    ]
   },
   {
@@ -967,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
