--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -224,30 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now running: ctrl&101:   0%|          | 0/16 [00:00<?, ?it/s]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&107:   6%|▋         | 1/16 [00:06<01:30,  6.05s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:11<01:16,  5.49s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:19<01:26,  6.62s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:25<01:16,  6.38s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:30<01:08,  6.19s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1256:  38%|███▊      | 6/16 [00:37<01:03,  6.37s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1488:  44%|████▍     | 7/16 [00:44<00:59,  6.62s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&101:  50%|█████     | 8/16 [00:51<00:52,  6.62s/it] /home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&107:  56%|█████▋    | 9/16 [00:57<00:45,  6.51s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:02<00:36,  6.03s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:10<00:32,  6.60s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:17<00:26,  6.60s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:22<00:18,  6.25s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1256:  88%|████████▊ | 14/16 [01:29<00:13,  6.52s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488:  94%|█████████▍| 15/16 [01:37<00:06,  6.89s/it]/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488: 100%|██████████| 16/16 [01:45<00:00,  6.62s/it]\n"
+      "Now running: stim&1488: 100%|██████████| 16/16 [01:39<00:00,  6.23s/it]\n"
      ]
     }
    ],
@@ -1381,7 +1365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we can see that views that include CD14+ Monocytes have the highest variance explained both as source and as target of intercellular communication events. In particular, we see that putative autocrine interactions that occur between CD14+ Monocytes are highly explained by the model."
+    "Here, we can see that views that include CD14+ Monocytes have the highest variance explained both as source and as target of intercellular communication events. In particular, we see that putative autocrine interactions that occur between CD14+ Monocytes are highly explained by Factor 1."
    ]
   },
   {
