--- a/space_F.ipynb
+++ b/space_F.ipynb
@@ -221,13 +221,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -412,7 +405,6 @@
     "    \n",
     "    lr_basis(adata_sample, function_name='jaccard', use_raw=False)\n",
     "    temp = li.fun.obsm_to_adata(adata_sample, 'local_scores')\n",
-    "    temp.var.set_index('interaction', inplace=True) # TODO resolve this thing\n",
     "    lrdatas.append(temp)"
    ]
   },
@@ -440,13 +432,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sc.pp.neighbors(lrdata)\n",
     "sc.tl.umap(lrdata)"
@@ -466,7 +451,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lrdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lrdata"
+   ]
   },
   {
    "cell_type": "code",
@@ -477,7 +473,7 @@
     "mdata = li.multi.adata_to_views(lrdata,\n",
     "                                groupby='leiden',\n",
     "                                sample_key='sample',\n",
-    "                                obs_keys=['patient_group', 'major_labl'], # TODO this should be None\n",
+    "                                obs_keys=None, # TODO this does not work...?\n",
     "                                min_prop=0.05, # min nnz values (filter features)\n",
     "                                min_smpls=3, # min samples per view (filter features)\n",
     "                                min_cells=25, # min cells per view (filter samples)\n",
@@ -493,8 +489,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "mdata"
+    "mdata.obs['sample'] = mdata.obs.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = mdata.obs.index\n",
+    "mdata.obs = mdata.obs.merge(lrdata.obs[['major_labl', 'sample']].drop_duplicates())\n",
+    "mdata.obs.index = index"
    ]
   },
   {
@@ -514,6 +528,13 @@
     "import muon as mu\n",
     "import mofax as mofa"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -667,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
