--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intercellular Context-Factorization with Tensor Cell2cell"
+    "# Intercellular Context Factorization with Tensor-Cell2cell"
    ]
   },
   {
